# WindowsReadMediaInfo

./: .gitignore  CMakeLists.txt  CODEOWNERS  README.md  build.gradle.kts  gradle.properties  jitpack.yml  main.hpp  settings.gradle.kts
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  suggestion.yml
gradle/: libs.versions.toml
src/main/kotlin/dev/lyzev/wrmi/: TrackInfo.kt  WindowsReadMediaInfo.kt
src/test/kotlin/dev/lyzev/wrmi/: Main.kt
